<resources>
    <string name="app_name">Utils</string>
    <string name="bluetooth_not_supported">Bluetooth not supported on this device</string>
    <string name="bluetooth_required">Bluetooth is required to use this app</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="bluetooth_permissions_required">Bluetooth permissions are required</string>
    <string name="hid_service_not_ready">HID service not ready. Please wait and try again.</string>
    <string name="no_paired_devices">No paired devices found. Pair a device first.</string>
    <string name="select_device_title">Select a Device</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="connection_failed_permission">Failed to connect due to permission issue</string>
    <string name="connection_failed_generic">Failed to connect unexpectedly</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="widget_not_connected">Not Connected</string>
    <string name="select_widget_device">Select Default Device for Widget</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect_failed_permission">Failed to disconnect due to permission issue</string>
    <string name="disconnect_failed_generic">Failed to disconnect unexpectedly</string>
    <string name="win_l_sent">Lock (Win+L)</string>
    <string name="unlock">Unlock</string>
    <string name="space">Space</string>
    <string name="password">Password</string>
    <string name="power_options">Power Options</string>
    <string name="shutdown">Shutdown</string>
    <string name="restart">Restart</string>
    <string name="sleep">Sleep</string>
    <string name="hibernate">Hibernate</string>
    <string name="power_command_sent">Power command sent: %1$s</string>
    <string name="clipboard_hint">Paste text to send</string>
    <string name="send_clipboard">Send Text</string>
    <string name="send_clipboard_with_enter">Text + Enter</string>
    <string name="change_password">Change Password</string>
    <string name="send_command_failed_permission">Failed to send command due to permission issue</string>
    <string name="send_command_failed_generic">Failed to send command unexpectedly</string>
    <string name="not_connected">Not connected to a device</string>
    <string name="hid_registered_success">HID registered successfully</string>
    <string name="hid_registration_failed">HID registration failed</string>
    <string name="hid_registration_failed_permission">Failed to register HID due to permission issue</string>
    <string name="hid_registration_failed_generic">Failed to register HID unexpectedly</string>
    <string name="hid_service_disconnected">HID service disconnected</string>
    <string name="hid_service_init_failed_permission">Failed to initialize HID service due to permission issue</string>
    <string name="hid_service_init_failed_generic">Failed to initialize HID service unexpectedly</string>
    <string name="permission_denied_paired_devices">Permission denied to access paired devices</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_to">Connected to %s</string>
    <string name="disconnected">Disconnected</string>
</resources>